# torch-onnx-models

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  python-package.yml
examples/: export_gemma.py  export_llama.py  infer.py
examples/genai_gemma/: genai_gemma.py
examples/genai_gemma/gemma-3-270m/: .gitignore  genai_config.json
src/torch_onnx_models/: __init__.py  _barrier.py  _config.py  _config_builder.py  _configs.py  _exporter.py  _global_configs.py  _module_barriers.py  _weight_loading.py
src/torch_onnx_models/components/: __init__.py  _activations.py  _attention.py  _attention_utils.py  _barrier.py  _decoder.py  _mlp.py  _model.py  _onnx_module.py  _rms_norm.py  _rms_norm_utils.py  _rotary_embedding.py  _rotary_embedding_utils.py
src/torch_onnx_models/models/: __init__.py  base.py  gemma3.py  gemma3_text.py  phi3.py  sigslip.py
src/torch_onnx_models/models/llama/: modeling_llama.py
src/torch_onnx_models/onnx_passes/: __init__.py  _assign_names.py  _barrier_removal.py  _collect_opsets.py  _fold_transpose.py  _subgraph_replacement.py
test/: attention_test.py  barrier_test.py  config_builder_test.py  module_barriers_test.py  onnx_passes_test.py  rms_norm_test.py  weight_loading_test.py
