[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-onnx-models"
version = "0.1.0"
description = "Models and components for PyTorch and ONNX."
authors = [
	{ name = "jambayk" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
	"torch>=2.8.0",
	"onnx",
    "onnxscript",
]
