[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-onnx-models"
version = "0.1.0"
description = "Models and components for PyTorch and ONNX."
authors = [
    { name = "Jambay Kinley", email = "jambaykinley@microsoft.com" },
    { name = "Justin Chu", email = "justinchu@microsoft.com" },

]
readme = "README.md"
license = "MIT"
dependencies = [
	"torch>=2.8.0",
	"onnx",
    "onnxscript",
]

[tool.pytest.ini_options]
addopts = "--tb=short --color=yes"
